// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
"
import unique from 'unique.macro'
      const uniqueClass = unique()

      ↓ ↓ ↓ ↓ ↓ ↓

const uniqueClass = 'css-1sxkeby';
"
`;

exports[`custom prefix 1`] = `
"
import unique from 'unique.macro'
      const uniqueSomething = unique('something-')

      ↓ ↓ ↓ ↓ ↓ ↓

const uniqueSomething = 'something-1x9ypyq';
"
`;

exports[`with commonjs 1`] = `
"
const unique = require('unique.macro')
      const uniqueClass = unique()

      ↓ ↓ ↓ ↓ ↓ ↓

const uniqueClass = 'css-1bvwn10';
"
`;
